# NHLHockeyPlayoffApp

./: .gitignore  .pre-commit-config.yaml  README.md  build_validation.py  pip-audit-report.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: api_cd.yml  api_cd_deploy_to_production.yml  api_cd_release.yml  api_ci.yml  api_ci_code_analyzer.yaml  api_ci_docker_image_build.yml  api_ci_health_check.yml  api_ci_integration_tests.yml  api_ci_static_code_analysis.yaml  api_ci_static_code_analysis.yml  api_ci_unit_tests.yml  api_pipeline.yml  app_cd.yml  app_ci_integration_test.yml  app_ci_unit_test.yml  dependabot-verification.yml  etl_ci_unit_tests.yml  issues_require_labels.yml  main.yml  pr-precommit.yaml  pr_require_labels.yml  restrict-main-merges.yml  reusable-pr-conventional-commit-title.yml  reusable-rebuild-caches.yaml  reusable-rebuild-caches.yml  validate_pr_labels.yml
.github/workflows/api/: api_cd_release.yml  api_ci_docker_image_build.yml  api_ci_health_check.yml  api_ci_static_code_analysis.yml  api_ci_unit_tests.yml  api_pipeline.yml
apps/: Dockerfile  pyproject.toml
apps/api/hockeyplayoffapi/: main.py
apps/api/hockeyplayoffapi/data/: hockeyplayoff.db
apps/api/hockeyplayoffapi/templates/: nhlscores.html
apps/api/tests/: test_main.py
apps/api/tests/integration_tests/: test_main_integration.py
apps/api/tests/unit_tests/: test_main_unit.py
apps/data/hockeyplayoffdb/: hockeyplayoff.db
apps/data/hockeyplayoffetl/: hockeyplayoff_etl.py
apps/data/tests/: test_hockeyplayoff_etl.py
docs/: nhlplayoff_erd.erd.json
src/: Dockerfile  requirements.txt
src/api/hockeyplayoffapi/: main.py
src/api/hockeyplayoffapi/data/: hockeyplayoff.db
src/api/hockeyplayoffapi/models/: nhl_schedules.py  nhl_scores.py  nhl_stats.py  nhl_teams.py
src/api/hockeyplayoffapi/templates/: index.html  nhl_gamedates_options.html  nhl_schedule.html  nhl_teams_options.html  nhlscores.html  nhlstats_leaders.html  schedule.html  stats.html
src/api/hockeyplayoffapi/templates/css/: style.css
src/data/hockeyplayoffdb/: hockeyplayoff.db
src/data/hockeyplayoffetl/: etl.py  hockeyplayoff_etl.py
src/data/hockeyplayoffetl/models/: api_url_models.py  data_request.py  nhl_goaltending_gaa_leader.py  nhl_goaltending_save_pct_leader.py  nhl_goaltending_win_leader.py  nhl_models.py  nhl_score.py  nhl_skate_goal_leader.py  nhl_skate_leaders.py  nhl_team.py
src/data/hockeyplayoffetl/services/: nhl_api_client.py  nhl_db_manager.py  nhl_etl_manager.py
src/data/hockeyplayoffetl/utils/: utility_manager.py
tests/api/integration/: test_main_integration.py
tests/api/unit/: test_main_unit.py
tests/data/unit/: test_hockeyplayoff_etl.py  test_nhl_api_client.py
