[project]
authors=[
    { name="Brandon M. Hunter", email="brandonmichaelhunter@gmail.com" },
]
description = "A FastAPI app displaying using NHL Hockey Playoff data."
name = "src"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "certifi==2026.4.22",
    "charset-normalizer==3.4.7",
    "click==8.3.3",
    "dnspython==2.8.0",
    "email-validator==2.3.0",
    "fastapi-cli==0.0.24",
    "fastapi-cloud-cli==0.17.0",
    "fastapi[standard]==0.136.1",
    "fastar==0.11.0",
    "greenlet==3.5.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "idna==3.13",
    "jinja2==3.1.6",
    "magicmock>=0.3",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "poethepoet>=0.45.0",
    "pydantic==2.13.3",
    "pydantic-core==2.46.3",
    "pydantic-extra-types==2.11.1",
    "pydantic-settings==2.14.0",
    "pygments==2.20.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.26",
    "pyyaml==6.0.3",
    "requests==2.33.1",
    "rich==15.0.0",
    "rich-toolkit==0.19.7",
    "rignore==0.7.6",
    "run>=0.3",
    "sentry-sdk==2.58.0",
    "shellingham==1.5.4",
    "sqlalchemy==2.0.49",
    "sqlmodel==0.0.38",
    "starlette==1.0.0",
    "typer==0.24.2",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.3",
    "uvicorn==0.46.0",
    "uvloop==0.22.1",
    "watchfiles==1.1.1",
    "websockets==16.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "magicmock>=0.3",
    "poethepoet>=0.45.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]
lint = [
    "ruff>=0.15.12",
]
[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning", "ignore::UserWarning"]
pythonpath= [".", "tests/data/", "tests/data/integration", "tests/api/unit", "tests/api/integration"]

[tool.ruff]
src=["src/api/hockeyplayoffapi", "tests", "src/data/hockeyplayoffetl"]
line-length=88
exclude=[".venv", "build", "dist", "__pycache__", "migrations", "venv", "env", "venv.*", "env.*"]

[tool.command]
test = "pytest"
lint = "ruff check ."

[tool.poe.tasks]
unit_test = "pytest -m unit"
integration_test = "pytest -m integration"
lint = "ruff check ."
format = "ruff check --fix && ruff format ."
run_api = "uv run fastapi dev ./src/api/hockeyplayoffapi/main.py --reload"
run_etl= "python -m src.data.hockeyplayoffetl.hockeyplayoff_etl"
docker_build = "docker build -f 'src/Dockerfile' -t hockeyplayoff:latest ."
docker_run = "docker run -p 8000:8000 hockeyplayoff:latest"
install_project = "uv sync --locked"