[project]
authors=[
    { name="Brandon M. Hunter", email="brandonmichaelhunter@gmail.com" },
]
description = "A FastAPI app displaying using NHL Hockey Playoff data."
name = "apps"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "sqlmodel>=0.0.38",
]
