[project]
authors=[
    { name="Brandon M. Hunter", email="brandonmichaelhunter@gmail.com" },
]
description = "A FastAPI app displaying using NHL Hockey Playoff data."
name = "apps"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "sqlmodel>=0.0.38",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "magicmock>=0.3",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning", 
    "ignore::UserWarning"]
